--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,12 @@
   column-gap: 40px;
 }
 
+/* editied by Akarsh Banthiya */
+
+
+/* End */
+
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
